# bayes-unets-for-phase-field-prediction

./: README.md  loaders.py  model.py  prepare_dataset.py  pyproject.toml  simulator.py  train_model.py
src/: prepare_dataset.py  test_prediction.py  train_model.py
src/pipeline/dataset/: loaders.py  prepare_dataset.py
src/pipeline/inference/: prediction.py  rollout.py  sampler.py
src/pipeline/model/: model.py
src/pipeline/postprocess/: plotting.py
src/simulator/: simulator.py
