[tool.poetry]
name = "bayes-uq-with-unets-for-phase-fields"
version = "0.1.0"
description = ""
authors = ["Arun Hegde <ashegde13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
numpy = "^2.1.3"
h5py = "^3.12.1"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
